# Unified-Navigation-Framework-for-Tethered-Robots

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  auto_unzip.yml  docker-compose.yaml  generate_js.py  requirements.txt  result_analyzer.py  root_files_upload.js  ros_entrypoint.sh  run_full_sim.sh  setup.sh  test_environment.py
.github/: ci-trigger.txt
.github/workflows/: python-package.yml  ros_ci.yml
assets/figures/figure-3/: create_benchmark_figure.m
assets/figures/sub-figure/: untitled8.m
devel/: local_setup.fish  setup.fish
devel/include/hybrid_navigation/: SceneComplexity.h  TetherStatus.h
devel/lib/hybrid_navigation/: scene_recognition_node.py  tether_tension_node.py
devel/lib/pkgconfig/: atlas_description.pc  atlas_gazebo.pc  hybrid_navigation.pc
devel/lib/python3/dist-packages/hybrid_navigation/msg/: _SceneComplexity.py  _TetherStatus.py  __init__.py
devel/share/atlas_description/cmake/: atlas_descriptionConfig.cmake
devel/share/atlas_gazebo/cmake/: atlas_gazeboConfig.cmake
devel/share/common-lisp/ros/hybrid_navigation/msg/: SceneComplexity.lisp  TetherStatus.lisp  _package.lisp  _package_SceneComplexity.lisp  _package_TetherStatus.lisp  hybrid_navigation-msg.asd
devel/share/gennodejs/ros/hybrid_navigation/msg/: SceneComplexity.js  TetherStatus.js  _index.js
devel/share/hybrid_navigation/cmake/: hybrid_navigation-msg-paths.cmake  hybrid_navigationConfig.cmake
devel/share/roseus/ros/hybrid_navigation/: manifest.l
devel/share/roseus/ros/hybrid_navigation/msg/: SceneComplexity.l  TetherStatus.l
log/: latest_build
results/: sim_data_20260124_174857_report.txt  sim_data_20260124_175058_report.txt  sim_data_20260124_175245_report.txt  sim_data_20260125_022541_report.txt  sim_data_20260125_023307_report.txt
scripts/matlab/: figure_2.m  figure_4.m  figure_7.m  figure_8.m
src/atlas_description/: CMakeLists.txt  package.xml
src/atlas_description/urdf/: atlas_t.xacro
src/atlas_gazebo/: CMakeLists.txt  package.xml
src/atlas_gazebo/launch/: spawn_robot.launch  spawn_robot.launch.py  spawn_swarm.launch  spawn_swarm.launch.py
src/atlas_gazebo/scripts/: world_generator.py
src/atlas_gazebo/worlds/: warehouse_world.world
src/atlas_mission_control/: CMakeLists.txt  package.xml  setup.py
src/atlas_mission_control/nodes/: mission_manager_node.py
src/hybrid_navigation/: CMakeLists.txt  package.xml  setup.py
src/hybrid_navigation/launch/: hybrid_navigation.launch  hybrid_navigation.launch.py  hybrid_navigation_swarm.launch  hybrid_navigation_swarm.launch.py  master.launch  master.launch.py  master_swarm.launch  master_swarm.launch.py  mock_sim.launch  mock_sim.launch.py
src/hybrid_navigation/nodes/: data_logger_node.py  fuzzy_controller_node.py  ga_optimizer_node.py  hybrid_planner_node.py  mock_data_generator.py  scene_recognition_node.py  sensor_fusion_node.py  swarm_coordinator_node.py  swarm_data_logger_node.py  tether_tension_node.py
src/hybrid_navigation/rviz/: navigation.rviz
src/hybrid_navigation_msgs/: CMakeLists.txt  package.xml
src/hybrid_navigation_msgs/msg/: SceneComplexity.msg  TetherStatus.msg
wiki/: Architecture.md  CI-CD.md  Home.md  Installation.md  Usage.md
