<?xml version="1.0"?>
<package format="2">
  <name>atlas_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo simulation environment for ATLAS-T tethered robot</description>
  
  <maintainer email="chandan@bit.edu.cn">Chandan Sheikder</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>gazebo_plugins</depend>
  <depend>atlas_description</depend>
  <depend>velodyne_simulator</depend>
  <depend>hector_gazebo_plugins</depend>
  
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
