<?xml version="1.0"?>
<package format="2">
  <name>hybrid_navigation</name>
  <version>1.0.0</version>
  <description>Hybrid navigation stack with fuzzy logic and tether awareness for ATLAS-T</description>
  
  <maintainer email="chandan@bit.edu.cn">Chandan Sheikder</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  
  <export>
  </export>
</package>
