<?xml version="1.0"?>
<package format="3">
  <name>hybrid_navigation</name>
  <version>1.0.0</version>
  <description>Hybrid navigation stack with fuzzy logic and tether awareness for ATLAS-T</description>
  
  <maintainer email="chandan@bit.edu.cn">Chandan Sheikder</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>hybrid_navigation_msgs</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
